oh baby, it works! several events finished, fixed problems in calculateneighbour index method, attached left_click, finished reveal() method. TODO: finish the gameplay with complete or gameover endings, attach the new game button to generate() method, show timer, show mine covered counter.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,7 +57,7 @@ body {
     width: 38px;
     height: 34px;
     margin-right: 5px;
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 /* Responsive: Portrait tablets and up */
@@ -78,7 +78,6 @@ body {
     outline: medium none;
     -moz-outline-style: none;
     border: 0px;
-    margin-top: 3px;
     top: 0;
 }
 .btn3d:focus {
